tests/errors/tc_stmt_var_dup.lx
@module "main"

pub const main -> fn () int {
    let x: int = 5;
    let x: int = 10;
    return 0;
}
